--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,27 +3,27 @@
 <head>
     <title><%= content_for?(:title) ? yield(:title) : "gluster-web" %> </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
     <%= csrf_meta_tags %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <%= stylesheet_link_tag "application", media: 'all', 'data-turbolinks-track' => false %>
 </head>
 <body class="nav-md">
-    <div id="spinner" class="overlay">
-        <div class="sk-fading-circle" class="overlay">
-            <div class="sk-circle1 sk-circle"></div>
-            <div class="sk-circle2 sk-circle"></div>
-            <div class="sk-circle3 sk-circle"></div>
-            <div class="sk-circle4 sk-circle"></div>
-            <div class="sk-circle5 sk-circle"></div>
-            <div class="sk-circle6 sk-circle"></div>
-            <div class="sk-circle7 sk-circle"></div>
-            <div class="sk-circle8 sk-circle"></div>
-            <div class="sk-circle9 sk-circle"></div>
-            <div class="sk-circle10 sk-circle"></div>
-            <div class="sk-circle11 sk-circle"></div>
-            <div class="sk-circle12 sk-circle"></div>
-        </div>
-    </div>
+<!--    <div id="spinner" class="overlay">-->
+<!--        <div class="sk-fading-circle" class="overlay">-->
+<!--            <div class="sk-circle1 sk-circle"></div>-->
+<!--            <div class="sk-circle2 sk-circle"></div>-->
+<!--            <div class="sk-circle3 sk-circle"></div>-->
+<!--            <div class="sk-circle4 sk-circle"></div>-->
+<!--            <div class="sk-circle5 sk-circle"></div>-->
+<!--            <div class="sk-circle6 sk-circle"></div>-->
+<!--            <div class="sk-circle7 sk-circle"></div>-->
+<!--            <div class="sk-circle8 sk-circle"></div>-->
+<!--            <div class="sk-circle9 sk-circle"></div>-->
+<!--            <div class="sk-circle10 sk-circle"></div>-->
+<!--            <div class="sk-circle11 sk-circle"></div>-->
+<!--            <div class="sk-circle12 sk-circle"></div>-->
+<!--        </div>-->
+<!--    </div>-->
     <% flash.each do |key, value| %>
     <div align="center" id="flash" class="alert alert-<%= key %>"><%= value %>
         <a href="#" data-dismiss="alert" class="close">×</a>
